fix sonar (#1265)